fix: make navbar display properly on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,7 +30,6 @@ body {
   margin: 0;
 }
 
-nav,
 header,
 main,
 footer {
